--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,5 +1,6 @@
-ï»¿body 
-{font: 13px/1.231 "helvetica neue","å¾®è½¯é›…é»‘",arial,helvetica,clean,sans-serif;color:#666; background-color:#f1f9fe;}
+body 
+{font: 13px/1.231 "helvetica neue","Î¢ÈíÑÅºÚ",arial,helvetica,clean,sans-serif;
+	color:#666; /* background-color:#f1f9fe; */background: #fff url(../images/background.jpg) 50% 0 no-repeat;}
 
 .loginBg{margin-bottom: 20px;}
 
@@ -7,23 +8,24 @@
 .intro p{ margin-bottom:15px;}
 
 #login{position: absolute;}
-.login_form{-moz-border-radius:15px;padding:10px 0;border-radius:15px;background-color:#F1F9FE;left:20px;top:100px;width:320px;}
+.login_form{-moz-border-radius:15px;padding:10px 0;border-radius:15px;/*background-color:#F1F9FE;*/left:20px;top:100px;width:320px;}
 .login_form .toolbar{margin:0 auto;}
 .login_form h1{margin: 20px;text-align: center;}
 .loginFormInner{ margin:25px 0; }
 .loginFormInner .logo{height:61px;width:131px; margin:0 auto; background: url("https://new.mo9.com/intra/images/mobile/logo_mo9.png") no-repeat;}
 .loginFormInner p.spasial{ margin-top:20px;}
 .loginFormInner span{ width:60px; margin-bottom:6px; font-size:18px; display:inline-block;}
-.loginFormInner input{ width:288px;margin:0 6px;height:30px; line-height:30px; border:solid 2px #d7d7d7; padding:8px; color:#666; font-size:18px; border-radius:5px;font-family:"å¾®è½¯é›…é»‘"}
+.loginFormInner input{ width:308px;margin:0 6px;height:40px; line-height:30px; border:solid 2px #d7d7d7; padding:8px; color:#666; font-size:18px; border-radius:5px;font-family:"Î¢ÈíÑÅºÚ"}
 .loginFormInner p.error span{ word-wrap:break-word; width:100%; font-size:12px; margin:0px;}
 
-.loginBtn{background-color:#1386b7;bottom:100px;cursor: pointer;height:50px; text-align:center;width:308px;color:#fff;font-size:18px; border:none;border-radius:5px;font-family:"å¾®è½¯é›…é»‘";margin:0 6px;}
+.loginBtn{background-color:#1386b7;bottom:100px;cursor: pointer;height:50px; text-align:center;width:308px;color:#fff;font-size:18px; border:none;border-radius:5px;font-family:"Î¢ÈíÑÅºÚ";margin:0 6px;}
 .loginFormInner p.error{  word-wrap:break-word; }
 .loginFormInner p.error span.hide{ display:none;}
 
 .lock{ background:url(../images/lock.png) no-repeat; position:absolute; right:20px; bottom:50px; width:155px; height:167px;}
 
-.foot{ text-align:center; padding:15px 0px; width:320px; border-top:solid 1px #ccc; margin:0 auto;}
+/* .foot{ text-align:center; padding:15px 0px; width:320px; border-top:solid 1px #ccc; margin:0 auto;} */
+.foot{color:#fff;text-align:center;margin-top:25px;color:#B3B8C4;}
 
 input{-webkit-tap-highlight-color:rgba(0,0,0,0);}
 input[type=submit]{-webkit-appearance:none;outline:none}
